# grimshire-manor

./: .gitignore  CMakeLists.txt  Makefile  NonPlayerCharacter.cpp  NonPlayerCharacter.h  README.md  main.cpp  mystery
include/: Character.h  Clue.h  Game.h  Location.h  NPC.h  Suspect.h  Type.h  character.h  clue.h  game.h  location.h
include/Locations/: Bedroom.h  Foyer.h  Kitchen.h  Library.h  Office.h
src/: Clue.cpp  Game.cpp  NPC.cpp  Suspect.cpp  Type.cpp  main.cpp
src/Locations/: Bedroom.cpp  Foyer.cpp  Kitchen.cpp  Library.cpp  Location.cpp  Office.cpp  location.cpp
test/: gameTest.cpp  locationTest.cpp  suspectTest.cpp
